# tech-challenge-3-dados-ipca

./: README.md  prevendo_a_inflacao.ipynb
API-dados-IPCA/: .gitignore  README.md  pyproject.toml
API-dados-IPCA/api/: app.py  schemas.py  security.py
API-dados-IPCA/api/routers/: auth.py
API-dados-IPCA/migrations/: env.py
Transformacao-base-IPCA/: transformacao_base_IPCA.py
api/: database.py
api/routers/: ipca.py  users.py
migrations/versions/: 681fa444bf23_create_users_table.py
