[project]
name = "api-dados-ipca"
version = "0.1.0"
description = ""
authors = [
    {name = "Mayara",email = "mayreghin@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "shell (>=1.0.1,<2.0.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "requests (>=2.32.3,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "beautifulsoup4 (>=4.13.4,<5.0.0)",
    "sqlalchemy[asyncio] (>=2.0.40,<3.0.0)",
    "pwdlib[argon2] (>=0.2.1,<0.3.0)",
    "pydantic (>=2.11.4,<3.0.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "aiosqlite (>=0.21.0,<0.22.0)",
    "alembic (>=1.15.2,<2.0.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)"
]

[tool.poetry]
packages = [{include = "api", from = "."}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
